--- a/my-portfolio/src/pages/contact/contact.css
+++ b/my-portfolio/src/pages/contact/contact.css
@@ -1,4 +1,5 @@
 .contact-method {
+    height: 14.2rem;
     background: rgba(30, 30, 30, 0.5);
     backdrop-filter: blur(10px);
     border-radius: 15px;
@@ -58,17 +59,6 @@
     font-weight: 500;
 }
 
-.form-group input,
-.form-group textarea {
-    width: 100%;
-    padding: 15px;
-    border-radius: 10px;
-    border: 1px solid rgba(255, 255, 255, 0.1);
-    background: rgba(255, 255, 255, 0.05);
-    color: var(--text-primary);
-    font-size: 16px;
-    transition: border 0.3s, box-shadow 0.3s;
-}
 
 .form-group input:focus,
 .form-group textarea:focus {
